--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img {
   width: 2rem;
 }
 
-tfoot {
+#footer {
   font-weight: 800;
   position: fixed;
   left: 0;
@@ -61,10 +61,16 @@ tfoot {
   z-index: 100;
   background-color: var(--bs-body-bg);;
   width: 100%;
+  height: 3rem;
 }
 
-tfoot tr{
+#footer tr{
   width: 100%;
+}
+
+#footer tr td{
+  min-width: 2rem;
+  padding: 0.5rem 0.5rem;
 }
 
 .valueRed {
